--- a/charts/platform-addon-eventprocessing/Chart.yaml
+++ b/charts/platform-addon-eventprocessing/Chart.yaml
@@ -8,7 +8,7 @@ apiVersion: v2
 name: platform-addon-eventprocessing
 description: TIBCO Platform chart for BE addon
 type: application
-version: 1.6.0-alpha.1
+version: 1.6.0
 appVersion: "1.6.0"
 keywords:
   - tibco-platform
