--- a/charts/tibco-developer-hub/templates/ingress_public_nginx.yaml
+++ b/charts/tibco-developer-hub/templates/ingress_public_nginx.yaml
@@ -27,7 +27,7 @@ spec:
         paths:
           - backend:
               service:
-                name: {{ include "common.names.fullname" . }}
+                name: {{ include "tibcohub.fullname" . }}
                 port:
                   number: {{ .Values.service.ports.backend }}
             path: {{ .Values.ingress.pathPrefix }}/(.*)
@@ -37,7 +37,7 @@ spec:
         paths:
           - backend:
               service:
-                name: {{ include "common.names.fullname" . }}
+                name: {{ include "tibcohub.fullname" . }}
                 port:
                   number: {{ .Values.service.ports.backend }}
             path: {{ .Values.ingress.pathPrefix }}
