--- a/charts/tibco-developer-hub/templates/ingress_public_traefik.yaml
+++ b/charts/tibco-developer-hub/templates/ingress_public_traefik.yaml
@@ -21,7 +21,7 @@ spec:
         paths:
           - backend:
               service:
-                name: {{ include "common.names.fullname" . }}
+                name: {{ include "tibcohub.fullname" . }}
                 port:
                   number: {{ .Values.service.ports.backend }}
             path: {{ .Values.ingress.pathPrefix }}
