--- a/charts/tibco-developer-hub/templates/well-known-configuration-ingress-nginx.yaml
+++ b/charts/tibco-developer-hub/templates/well-known-configuration-ingress-nginx.yaml
@@ -2,7 +2,6 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 {{ if eq .Values.global.cp.resources.ingress.ingressController "nginx" -}}
-{{ $cpHostname := (.Values.global.cp).cpHostname | required ".Values.global.cp.cpHostname is required." }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -29,7 +28,7 @@ spec:
         paths:
           - backend:
               service:
-                name: {{ include "common.names.fullname" . }}
+                name: {{ include "tibcohub.fullname" . }}
                 port:
                   number: {{ .Values.service.ports.backend }}
             path: {{.Values.ingress.pathPrefix }}/.well-known/openid-configuration/
