--- a/charts/tibco-developer-hub/templates/well-known-configuration-svc.yaml
+++ b/charts/tibco-developer-hub/templates/well-known-configuration-svc.yaml
@@ -6,7 +6,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "common.names.fullname" . }}-wkc
+  name: {{ include "tibcohub.fullname" . }}-wkc
   namespace: {{ .Release.Namespace | quote }}
   labels: {{- include "common.labels.standard" . | nindent 4 }}
     app.kubernetes.io/component: backstage
