--- a/charts/tibco-developer-hub/values.yaml
+++ b/charts/tibco-developer-hub/values.yaml
@@ -44,7 +44,7 @@ global:
     containerRegistry:
       secret: "abcd"
       repository: "tibco-platform-docker-prod"
-      url: "reldocker.tibco.com"
+      url: "csgprduswrepoedge.jfrog.io"
     logging:
       fluentbit:
         image:
@@ -151,8 +151,7 @@ backstage:
     # -- Backstage image name
     name: dx-tibco-hub
     # -- Backstage image tag (immutable tags are recommended)
-    tag: "827"
-
+    tag: "875"
     # -- Specify a imagePullPolicy.
     # Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
     # <br /> Ref: https://kubernetes.io/docs/user-guide/images/#pre-pulling-images
