--- a/charts/tp-cp-core/templates/tsc-dns-cm.yaml
+++ b/charts/tp-cp-core/templates/tsc-dns-cm.yaml
@@ -27,6 +27,7 @@ data:
   TP_CP_IDP_HOST: {{ include "tpcontrol-plane.consts.tpIdpJobServiceName" . }}
   TP_CP_PERMISSIONS_ENGINE_HOST: {{ include "tpcontrol-plane.consts.tpCpPermissionEngineServiceName" . }}
   TP_CP_MONITORING_HOST: {{ include "tpcontrol-plane.consts.cpMonitoringServiceName" . }}
+  TP_CP_ALERT_SERVICE_HOST: {{ include "tpcontrol-plane.consts.tpCpAlertServiceName" . }}
   SYSTEM_INTERNAL_PROVISIONER_AGENT_HOST: {{ include "tpcontrol-plane.consts.provisionerAgentURLFramework" . }}
   TP_CP_ACME_HOST: acme.{{ include "cp-core-configuration.cp-dns-domain" . }}
   TP_CP_OCTAN_HOST: octan.{{ include "cp-core-configuration.cp-dns-domain" . }}
